<resources>
    <string name="app_name">BasicUsecaseDemo</string>

    <string name = "not_allowed" translatable="false">this string should not be uploaded or added to allowed strings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_scrolling">Offered items</string>
    <string name="title_activity_shopping_cart">Your Shopping Cart</string>

    <string name="buy_message">Thank you for your business!</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <string name="item1_title">Simple Toothbrush</string>
    <string name="item1_desc">This classical design, requires manual labor but gets the job done.</string>
    <string name="item1_price">1,99€</string>

    <string name="item2_title">Electric Toothbrush</string>
    <string name="item2_desc">Improving on the classical design this Toothbrush is brushing your teeth for you.</string>
    <string name="item2_price">29,99€</string>

    <string name="item3_title">Ultrasonic electric Toothbrush</string>
    <string name="item3_desc">This amazing piece of dental technology puts the fun back into teeth brushing</string>
    <string name="item3_price">129,99€</string>

    <string name="item4_title">Toothpaste</string>
    <string name="item4_desc">Simple yet effective at protecting your teeth.</string>
    <string name="item4_price">0,99€</string>
    <string name="count">Amount:</string>
    <string name="login_title">Login</string>
    <string name="buy">Buy</string>
    <string name="pay">Pay</string>
    <string name="back">Back</string>
    <string name="your_items">Your items</string>
</resources>
