<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/itemList"
        android:layout_weight="8"
        android:layout_margin="9dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/item1_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item1_title"
                    android:layout_weight="5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item1_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item1_price"
                    android:layout_weight="1"
                    android:textStyle="normal|italic" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/item1_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item1_desc"
                    android:layout_weight="5" />

                <Button
                    android:text="@string/buy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_buy_btn"
                    android:layout_weight="1"
                    android:onClick="buyItem"
                    style="@android:style/Widget.Button.Small"
                    android:elevation="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/item2_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item2_title"
                    android:layout_weight="5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item2_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item2_price"
                    android:layout_weight="1"
                    android:textStyle="normal|italic" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/item2_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item2_desc"
                    android:layout_weight="5" />
                <Button
                    android:text="@string/buy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@id/item_buy_btn"
                    android:layout_weight="1"
                    android:onClick="buyItem"
                    style="@android:style/Widget.Button.Small"
                    android:elevation="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/item3_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item3_title"
                    android:layout_weight="5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item3_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item3_price"
                    android:layout_weight="1"
                    android:textStyle="normal|italic" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/item3_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item3_desc"
                    android:layout_weight="5" />

                <Button
                    android:text="@string/buy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@id/item_buy_btn"
                    android:layout_weight="1"
                    android:onClick="buyItem"
                    style="@android:style/Widget.Button.Small"
                    android:elevation="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/item4_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item4_title"
                    android:layout_weight="5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item4_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item4_price"
                    android:layout_weight="1"
                    android:textStyle="normal|italic" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/item4_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/item4_desc"
                    android:layout_weight="5" />

                <Button
                    android:text="@string/buy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@id/item_buy_btn"
                    android:layout_weight="1"
                    android:onClick="buyItem"
                    style="@android:style/Widget.Button.Small"
                    android:elevation="5dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:text="@string/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/profile_btn"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1" />

        <Button
            android:text="@string/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_btn"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1" />

        <Button
            android:text="@string/shopping_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cart_btn"
            android:layout_weight="3"
            android:onClick="showShoppingCart"
            android:ellipsize="end"
            android:maxLines="1" />
    </LinearLayout>

</LinearLayout>