<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shopping_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.applanga.com.basicusecasedemo.ShoppingCartActivity">

    <TextView
        android:text="@string/your_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"
        android:id="@+id/cart_title"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/cart_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cart_title"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/cart_buttons"
        android:layout_margin="9dp"
        android:background="#11FFFFFF"
        android:padding="9dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:text="@string/item1_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:text="@string/count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
                <TextView
                    android:text="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:text="@string/item3_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:text="@string/count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
                <TextView
                    android:text="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:text="@string/item2_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:text="@string/count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
                <TextView
                    android:text="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="6dp">

        <Button
            android:text="@string/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cart_back_btn"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:onClick="goBack"/>

        <Button
            android:text="@string/pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cart_buy_btn"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:onClick="pay"/>
    </LinearLayout>

</RelativeLayout>
